MIGRATION-SC/opt-disable-audit-logs/admission-controller.yaml







apiVersion: apps/v1
kind: Deployment
metadata:
  name: admission-control
  namespace: stackrox
  labels:
    app.kubernetes.io/component: admission-control
    app.kubernetes.io/instance: stackrox-secured-cluster-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-secured-cluster-services
    app.kubernetes.io/version: 4.11.x-642-g9ef4d6250d
    helm.sh/chart: sensor-400.11.0-642-g9ef4d6250d
    app: admission-control
    auto-upgrade.stackrox.io/component: "sensor"
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-secured-cluster-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
spec:
  replicas: 3
  minReadySeconds: 0
  selector:
    matchLabels:
      app: admission-control
  template:
    metadata:
      namespace: stackrox
      labels:
        app: admission-control
        app.kubernetes.io/component: admission-control
        app.kubernetes.io/instance: stackrox-secured-cluster-services
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: stackrox
        app.kubernetes.io/part-of: stackrox-secured-cluster-services
        app.kubernetes.io/version: 4.11.x-642-g9ef4d6250d
        helm.sh/chart: sensor-400.11.0-642-g9ef4d6250d
      annotations:
        email: support@stackrox.com
        meta.helm.sh/release-name: stackrox-secured-cluster-services
        meta.helm.sh/release-namespace: stackrox
        openshift.io/required-scc: restricted-v2
        owner: stackrox
        traffic.sidecar.istio.io/excludeInboundPorts: "8443"
    spec:
      # Attempt to schedule these on master nodes
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: Exists
            weight: 50
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: admission-control
              topologyKey: kubernetes.io/hostname
            weight: 60
      serviceAccountName: admission-control
      containers:
        - image: "quay.io/rhacs-eng/main:4.11.x-642-g9ef4d6250d"
          imagePullPolicy: IfNotPresent
          name: admission-control
          readinessProbe:
            httpGet:
              scheme: HTTPS
              path: /ready
              port: 8443
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 1
          ports:
            - containerPort: 8443
              name: webhook
            - containerPort: 9091
              name: monitoring-tls
          command:
            - admission-control
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 50m
              memory: 100Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: config
              mountPath: /run/config/stackrox.io/admission-control/config/
              readOnly: true
            - name: config-store
              mountPath: /var/lib/stackrox/admission-control/
            - name: ca
              mountPath: /run/secrets/stackrox.io/ca/
              readOnly: true
            - name: certs
              mountPath: /run/secrets/stackrox.io/certs/
              readOnly: true
            - name: ssl
              mountPath: /etc/ssl
            - name: pki
              mountPath: /etc/pki/ca-trust/
            - name: additional-cas
              mountPath: /usr/local/share/ca-certificates/
              readOnly: true
            
            - name: trusted-ca-volume
              mountPath: /etc/pki/injected-ca-trust/
              readOnly: true
            
            
            - name: monitoring-tls
              mountPath: /run/secrets/stackrox.io/monitoring-tls
              readOnly: true
      volumes:
        - name: certs
          secret:
            secretName: admission-control-tls
            optional: true
            items:
            - key: admission-control-cert.pem
              path: cert.pem
            - key: admission-control-key.pem
              path: key.pem
            - key: ca.pem
              path: ca.pem
        - name: ca
          secret:
            secretName: service-ca
            optional: true
        - name: config
          configMap:
            name: admission-control
            optional: true
        - name: config-store
          emptyDir: {}
        - name: ssl
          emptyDir: {}
        - name: pki
          emptyDir: {}
        - name: additional-cas
          secret:
            secretName: additional-ca-sensor
            optional: true
        
        - name: trusted-ca-volume
          configMap:
            name: injected-cabundle-stackrox-secured-cluster-services
            items:
              - key: ca-bundle.crt
                path: tls-ca-bundle.pem
            optional: true
        
        
        - name: monitoring-tls
          secret:
            secretName: admission-control-monitoring-tls
---

apiVersion: v1
kind: Service
metadata:
  name: admission-control
  namespace: stackrox
  labels:
    app.kubernetes.io/component: admission-control
    app.kubernetes.io/instance: stackrox-secured-cluster-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-secured-cluster-services
    app.kubernetes.io/version: 4.11.x-642-g9ef4d6250d
    helm.sh/chart: sensor-400.11.0-642-g9ef4d6250d
    auto-upgrade.stackrox.io/component: "sensor"
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-secured-cluster-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
    service.beta.openshift.io/serving-cert-secret-name: admission-control-monitoring-tls
spec:
  ports:
    - name: https
      port: 443
      targetPort: webhook
      protocol: TCP
    - name: monitoring-tls
      port: 9091
      targetPort: monitoring-tls
      protocol: TCP
  selector:
    app: admission-control
  type: ClusterIP
  sessionAffinity: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: stackrox
  labels:
    app.kubernetes.io/component: admission-control
    app.kubernetes.io/instance: stackrox-secured-cluster-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-secured-cluster-services
    app.kubernetes.io/version: 4.11.x-642-g9ef4d6250d
    helm.sh/chart: sensor-400.11.0-642-g9ef4d6250d
    auto-upgrade.stackrox.io/component: "sensor"
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-secured-cluster-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
webhooks:
  - name: policyeval.stackrox.io
    sideEffects: NoneOnDryRun
    admissionReviewVersions: [ "v1", "v1beta1" ]
    timeoutSeconds: 12
    rules:
      - apiGroups:
        - '*'
        apiVersions:
        - '*'
        operations:
        - CREATE
        - UPDATE
        resources:
          - pods
          - deployments
          - deployments/scale
          - replicasets
          - replicationcontrollers
          - statefulsets
          - daemonsets
          - cronjobs
          - jobs
          - deploymentconfigs
    namespaceSelector:
      matchExpressions:
      - key: namespace.metadata.stackrox.io/name
        operator: NotIn
        values:
          - stackrox
          - kube-system
          - kube-public
          - istio-system
    failurePolicy: "Ignore"
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUIwVENDQVhpZ0F3SUJBZ0lVUnczdUlEZ2JPU2ttbDh4cVRxZ1RXaUoyWXlzd0NnWUlLb1pJemowRUF3SXcKUnpFbk1DVUdBMVVFQXhNZVUzUmhZMnRTYjNnZ1EyVnlkR2xtYVdOaGRHVWdRWFYwYUc5eWFYUjVNUnd3R2dZRApWUVFGRXhNMU5qWXpOREU1T1RjMk16VXhNVGMwTmpVd01CNFhEVEkyTURReU1UQTNNVGd3TUZvWERUTXhNRFF5Ck1EQTNNVGd3TUZvd1J6RW5NQ1VHQTFVRUF4TWVVM1JoWTJ0U2IzZ2dRMlZ5ZEdsbWFXTmhkR1VnUVhWMGFHOXkKYVhSNU1Sd3dHZ1lEVlFRRkV4TTFOall6TkRFNU9UYzJNelV4TVRjME5qVXdNRmt3RXdZSEtvWkl6ajBDQVFZSQpLb1pJemowREFR [...]
      service:
        namespace: stackrox
        name: admission-control
        path: /validate
  - name: k8sevents.stackrox.io
    sideEffects: NoneOnDryRun
    admissionReviewVersions: [ "v1", "v1beta1" ]
    timeoutSeconds: 12
    rules:
      - apiGroups:
        - '*'
        apiVersions:
        - '*'
        operations:
        - CONNECT
        resources:
          - pods
          - pods/exec
          - pods/portforward
          - pods/attach
    failurePolicy: "Ignore"
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUIwVENDQVhpZ0F3SUJBZ0lVUnczdUlEZ2JPU2ttbDh4cVRxZ1RXaUoyWXlzd0NnWUlLb1pJemowRUF3SXcKUnpFbk1DVUdBMVVFQXhNZVUzUmhZMnRTYjNnZ1EyVnlkR2xtYVdOaGRHVWdRWFYwYUc5eWFYUjVNUnd3R2dZRApWUVFGRXhNMU5qWXpOREU1T1RjMk16VXhNVGMwTmpVd01CNFhEVEkyTURReU1UQTNNVGd3TUZvWERUTXhNRFF5Ck1EQTNNVGd3TUZvd1J6RW5NQ1VHQTFVRUF4TWVVM1JoWTJ0U2IzZ2dRMlZ5ZEdsbWFXTmhkR1VnUVhWMGFHOXkKYVhSNU1Sd3dHZ1lEVlFRRkV4TTFOall6TkRFNU9UYzJNelV4TVRjME5qVXdNRmt3RXdZSEtvWkl6ajBDQVFZSQpLb1pJemowREFR [...]
      service:
        namespace: stackrox
        name: admission-control
        path: /events
